Switched some syntax around, using , controller as, es6 imports

--- a/client/components/main/main.tmpl.html
+++ b/client/components/main/main.tmpl.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
   <h1>boiler-MEAN is running! ;)</h1>
-  <h3>{{message}}</h3>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Repo</a></p>
+  <h3>{{mainCtrl.message}}</h3>
+  <p><a class="btn btn-primary btn-lg" ng-click="mainCtrl.useServiceMessage()" role="button">Repo</a></p>
 </div>
